# canola

./: .gitignore  Cargo.toml  README.md  package.json  test-scripts.sh  tsconfig.json  vitest.config.ts
.github/workflows/: CI.yml
examples/: tesla-seat.ts  tesla-seat.types.ts
examples/can-sniffer/: README.md  index.ts  package-lock.json  package.json
examples/tesla-seat-manager/: README.md  index.ts  package-lock.json  package.json  schema.kcd  types.ts
js/: bitstruct.ts  can-schema.ts  cli.ts  conversions.ts  database.ts  demo.ts  index.ts  kcd-parser.ts  message-schema.ts  message.ts  native.cjs  native.d.cts  periodic.ts  signal-schema.ts  signal.ts  sniffer.ts  type-generator.ts  types.ts  xml-type-parser-1.ts  xml-type-parser-2.ts  xml-type-parser-3.ts
js/__test__/: bitstruct.test.ts  can-schema.test.ts  can-schema.test.tsx  can-socket.test.ts  codec.test.ts  codegen.test.ts  database.test.ts  foobar.ts  index.test.ts  jsx.ts  message-schema.test.tsx  template.test.ts  type-generator.test.ts  types.ts  util.ts  utils.ts
js/parser/: bitstruct.ts  conversions.ts  database.ts  message.ts  named-signal-value.ts  signal.ts  types.ts
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
src/: broadcast.rs  lib.rs  periodic_task.rs
(+14 files in other folders)
