[package]
edition = "2021"
name = "davtomkra_canola"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.168"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
socket2 = { version = "0.5.8", features = ["all"] }
uv-sys = "0.1.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
